# poc-authentication-system

./: .gitignore
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/poc_authentication_system/: app.py  database.py  models.py  schemas.py  settings.py  users.py
devops/: docker-compose.yml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/components/: Button.tsx  Header.tsx
frontend/src/pages/authenticated/: index.tsx
frontend/src/pages/contacts/: index.tsx
frontend/src/pages/login-page/: index.tsx
frontend/src/pages/unauthenticated/: index.tsx
frontend/src/routes/: index.tsx
